# symphonia-voip

./: .gitignore  Cargo.toml  README.md  README.typ  codec.yaml  xmake.lua
codec-detector/: Cargo.toml
codec-detector/src/: lib.rs  rtp.rs
evs-codec-sys/: Cargo.toml  build.rs
evs-codec-sys/src/: evs_codec.h  evs_codec_fx.h  lib.rs  macos_aarch64.rs  macos_x86_64.rs
libg7221-sys/: Cargo.toml  build.rs
libg7221-sys/src/: lib.rs
opencore-amr-sys/: Cargo.toml  build.rs
opencore-amr-sys/src/: amrwb.h  lib.rs  macos_aarch64.rs
symphonia-bundle-amr/: Cargo.toml
symphonia-bundle-amr/src/: lib.rs
symphonia-bundle-amr/src/dec/: amrnb.rs  amrwb.rs  mod.rs
symphonia-bundle-amr/src/format/: amr.rs  amrwb.rs  mod.rs
symphonia-bundle-amr/src/rtp/: mod.rs
symphonia-bundle-evs/: Cargo.toml
symphonia-bundle-evs/src/: consts.rs  dec.rs  format.rs  lib.rs  rtp.rs  utils.rs
symphonia-codec-g722/: Cargo.toml
symphonia-codec-g722/src/: lib.rs
symphonia-codec-g7221/: Cargo.toml
symphonia-codec-g7221/src/: lib.rs
symphonia-codec-opus/: Cargo.toml
symphonia-codec-opus/examples/: demo.rs
symphonia-codec-opus/src/: errors.rs  lib.rs
symphonia-codec-opus/src/dec/: mod.rs  packet.rs
symphonia-codec-opus/src/silk/: consts.rs  mod.rs
symphonia-codec-opus/src/silk/dec/: mod.rs
symphonia-format-rtpdump/: Cargo.toml
symphonia-format-rtpdump/data/: multiple-ssrcs.json
symphonia-format-rtpdump/src/: codec_detector.rs  demuxer.rs  demuxer_new.rs  format.rs  lib.rs  rtp.rs  utils.rs
symphonia-format-rtpdump/src/codec_detect/: mod.rs  opus.rs
sys-builder/: Cargo.toml
sys-builder/src/: lib.rs
voip-replay/: Cargo.toml
voip-replay/src/: decode_only.rs  main.rs  output.rs
