[workspace]
resolver = "2"
members = [
    "codec-detector",
    "evs-codec-sys",
    "libg7221-sys",
    "opencore-amr-sys",
    "symphonia-bundle-amr",
    "symphonia-bundle-evs",
    "symphonia-format-rtpdump",
    "voip-replay",
    "sys-builder",
]

[workspace.dependencies]
anyhow = { version = "1" }
bindgen = { version = "0.69" }
cargo-emit = "0.2"
cc = { version = "1.0", features = ["parallel"] }
hex = "0.4"
log = "0.4"
num-derive = "0.4"
num-traits = "0.2"
symphonia-core = "0.5.4"
