[package]
name = "evs-codec-sys"
version = "0.1.0"
edition = "2021"
links = "evs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
anyhow = "1"
bindgen = { version = "0.66", optional = true }
cc = { version = "1.0", features = ["parallel"] }

[features]
default = ["floating-point", "gen"]
floating-point = []
gen = ["bindgen"]
