[package]
name = "evs-codec-sys"
version = "0.1.0"
edition = "2021"
links = "evs"

[dependencies]

[build-dependencies]
anyhow = { workspace = true }
bindgen = { workspace = true, optional = true }
cc = { workspace = true }

[features]
default = ["floating-point", "gen"]
floating-point = []
gen = ["bindgen"]
