[package]
name = "symphonia-bundle-evs"
version = "0.5.3"
edition = "2021"

[dependencies]
byteorder = "1"
log = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
symphonia-core = { workspace = true }

[dependencies.evs-codec-sys]
path = "../evs-codec-sys"

[features]
default = ["floating-point"]
floating-point = ["evs-codec-sys/floating-point"]
