[package]
name = "voip-replay"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4"
lazy_static = "1"
log = { version = "0.4", features = ["release_max_level_info"] }
pretty_env_logger = "0.5"
symphonia = { version = "0.5.3" }

symphonia-bundle-amr = { path = "../symphonia-bundle-amr" }
symphonia-bundle-evs = { path = "../symphonia-bundle-evs" }

[target.'cfg(target_os = "linux")'.dependencies]
libpulse-binding = "2.5.0"
libpulse-simple-binding = "2.5.0"

[target.'cfg(not(target_os = "linux"))'.dependencies]
arrayvec = "0.7.1"
cpal = "0.15.2"
rb = "0.4.1"
rubato = "0.15.0"
